--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 header{
     height: 90px;
-    background-color: blue;
 }
 .head-top{
     height: 30px;
@@ -13,20 +12,54 @@ header{
     background-color: black;
     text-align: end;
 }
-.section-1{
-    height: 500px;
-    background-color: teal;
+.navbar{
+    height: 60px;
 }
-
+.cc-btn-accedere{
+    height: 40px;
+    border-radius: 15px;
+}
+.cc-btn-search{
+    height: 40px;
+    border: none;
+}
+.header-bottom .logo-page{
+    width: 90px;
+    background-color: green;
+}
+.section-1{
+    height: 600px;
+    background-image: url('../img/returnal-listing-thumb-01-ps5.jpg');
+    
+    background-position: center;
+}
+.container-1{
+    padding-top: 300px;
+    color: white;
+}
+.cc-primo-btn{
+    border-radius: 20px;
+    background-color: #CD3D0F;
+    border-color: #CD3D0F;
+}
 .container-full{
     width: 90%;
     margin: 0 auto;
 }
 .container-2{
-    height: 100px;
+    height: 90px;
 }
 .container-2 .row .box{
-    background-color: violet;
+    height: 65px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
+.container-2 .box1, .container-2 .box3, .container-2 .box5{
+    background-image: url('../img/jumbo-bg.png');
+}
+.container-2 .box2, .container-2 .box4, .container-2 .box6{
+    background-image: url('../img/ratchet-and-clank-rift-apart-keyart.jpg');
 }
 .container-play .titolo{
     text-align: center;
@@ -35,13 +68,15 @@ header{
     display: flex;
     justify-content: space-between;
 }
-.container-play .info{
-    
+.container-play .col-info{
+    display: flex;
+    align-items: center;
+}
+.container-play .cc-btn-play{
+    border-radius: 20px;
 }
 .container-play .image{
-    width: 46%;
     min-height: 400px;
-    border: 1px solid;
 }
 img{
     width: 100%;
@@ -54,23 +89,109 @@ img{
     border-bottom: 1px solid blue;
 }
 .box-play{
-    background-color: turquoise;
+    
 }
 .section-2{
-    background-color: blueviolet;
-    height: 500px;
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+    background-position: center;
+    background-size: cover;
+    min-height: 500px;
+}
+.section-2 .logo1{
+    width: 200px;
+    
 }
 .container-3 {
     color: white;
-    padding-top: 140px;
+    padding-top: 50px;
 }
 .container-3 .testo{
     padding-top: 40px;
 }
 .section-3{
-    min-height: 400px;
+    min-height: 500px;
     background-color: #1F1F1F;
 }
 .container-4{
     color: white;
+}
+.row-giochi .box{
+    background-color: orange;
+    border-radius: 15px;
+    overflow: hidden;
+}
+.container-5{
+    min-height: 400px;
+}
+.container-5 .titolo{
+    text-align: center;
+}
+.container-5 .row .box{
+
+    background-color: orange;
+}
+.section-4{
+    min-height: 400px;
+    background-color: #BEBCBB;
+    background-image: url(../img/ps-plus-april-monthly-games-featured-image-block.png);
+    background-position: right;
+    background-size: 619px;
+    background-repeat: no-repeat;
+}
+.container-6 .logo{
+    width: 400px;
+}
+.container-7 .titolo{
+    text-align: center;
+}
+.container-7 .row .box{
+    background-color: red;
+}
+.section-5{
+    background-color: #161C3B;
+    background-image: url(../img/ps-now-april-featured-image-block.png);
+    background-size: 500px;
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.container-8{
+    min-height: 400px;
+}
+.container-8 .logo-titolo{
+    width: 400px;
+}
+.container-8 .text{
+    color: gray;
+}
+.container-9{
+    text-align: center;
+}
+.container-9 .box{
+    background-color: green;
+}
+.section-6{
+    background-color: #00439C;
+}
+.container-10{
+    min-height: 500px;
+    color: white;
+}
+.container-10 .logo-footer{
+    width: 100px;
+}
+.container-10 .logo-footer img{
+    filter: brightness(0) invert(1);
+    backgrounf-color: white;
+}
+
+.container-10 .lista-n li, .lista-n2 li, .lista-n3 li{
+    list-style: none;
+}
+.container-10 .image-footer{
+    width: 200px;
+}
+.container-10 p{
+    font-size: 13px;
+    margin-top: 10px;
+    padding-bottom: 70px;
 }
